# pocl

./: .bzrignore  .drone.yml  .gitattributes  .gitignore  .mailmap  .travis.yml  CHANGES  CMakeDoxyfile  CMakeLists.txt  COPYING  CPack.pocl.description.txt  CREDITS  Doxyfile  INSTALL  LAUNDRY  LICENSE  LICENSE.with.3rdparty  LICENSE_THIRDPARTY  Makefile.am  Makefile.in  README  README.ARM  README.CUDA  README.Cell  README.Darwin  README.FreeBSD  README.HSA  README.OSX  README.PPC64le  README.Windows  README.devel  README.md  README.mips  README.mipsel  README.packaging  README.powerpc  README.ppc64  SECURITY.md  TODO  TODO.piglit  (+19 more)
examples/: CMakeLists.txt  Makefile.am  Makefile.in  run_all.sh
examples/AMD/: AMDSDK.patch  CMakeLists.txt  Makefile.am  README  SDKApplication.cpp.patch
examples/AMDSDK2.9/: AMDSDK2_9.patch  CMakeLists.txt  KernelLaunch.patch  Makefile.am  README
examples/AMDSDK3.0/: CMakeLists.txt  Makefile.am  amdsdk3_0.patch  amdsdk_bench_runner.py  install.sh
examples/ASL/: CMakeLists.txt  asl.patch
examples/CLBlast/: CMakeLists.txt  README
examples/CloverLeaf/: CMakeLists.txt  Makefile.am  README  clover.in
examples/EinsteinToolkit/: CMakeLists.txt  EinsteinToolkit.c  ML_BSSN_CL_RHS1.cl  ML_BSSN_CL_RHS2.cl  Makefile.am
examples/Glow/: CMakeLists.txt  ctest_gen.rb
examples/Halide/: CMakeLists.txt  Makefile.am  README
examples/IntelSVM/: CMakeLists.txt  Makefile.am  README  intelsvm.patch  intelsvm_CMakeLists.txt
examples/OpenCV/: CMakeLists.txt  Makefile.am  README  opencv.patch
examples/OpenVX_CTS/: CMakeLists.txt
examples/Parboil/: CMakeLists.txt  Makefile.am  OpenCL_common.cpp.patch  README  benchmarks.patch  opencl.mk.patch
examples/PyOpenCL/: CL_UNORM_INT24.patch  CMakeLists.txt  README  build.sh  configure.sh  install.sh  runtest.sh  test_build_dir
examples/Rodinia/: CMakeLists.txt  Makefile.am  README  Rodinia.patch
examples/SYCL_CTS/: CMakeLists.txt
examples/UnitCL/: CMakeLists.txt
examples/VexCL/: CMakeLists.txt  Makefile.am  README
examples/ViennaCL/: CMakeLists.txt  Makefile.am  README  bandwidth-reduction.stdout  blas1.stdout  blas3_solve_double-test-opencl.stdout  blas3_solve_float-test-opencl.stdout  custom-context.stdout  custom-context.stdout.in  custom-kernels.stdout  external_linkage-opencl.stdout  fft.stdout  global_variables-test-opencl.stdout  iterators-test-opencl.stdout  iterators-test.stdout  matrix-test.stdout  matrix_col_double-test-opencl.stdout  matrix_col_float-test-opencl.stdout  matrix_col_int-test-opencl.stdout  matrix_range-test.stdout  matrix_row_double-test-opencl.stdout  matrix_row_float-test-opencl.stdout  matrix_row_int-test-opencl.stdout  matrix_vector-test-opencl.stdout  matrix_vector_int-test-opencl.stdout  nmf-test-opencl.stdout  scalar-test-opencl.stdout  scalar-test.stdout  scheduler.stdout  sparse-test.stdout  structured-matrices-test-opencl.stdout  structured-matrices-test.stdout  vector_double-test-opencl.stdout  vector_range-test.stdout  vectorbench.stdout  vienna_170.patch
examples/accel/: CMakeLists.txt  OpenCLcontext.cpp  OpenCLcontext.h  accel_countred.cpp  accel_example.cpp  firmware.c  generate_project.tcl  run_standalone_rtlsim.sh  run_standalone_ttasim.sh
examples/arrayfire/: CMakeLists.txt
examples/barriers/: Makefile.am  Makefile.in  barriers.c  barriers.cl  barriers_exec.c
examples/bfs/: CLHelper.h  Kernels.cl  bfs.cc  timer.h  util.h
examples/boxadd/: CMakeLists.txt  boxadd.c  boxadd.cl  boxadd_exec.c
examples/chip-spv/: CMakeLists.txt  HIP_tests_catch.patch  failed_tests_fp16_disabled.txt
examples/chipStar/: CMakeLists.txt  HIP_tests_catch.patch  chipstar_1_1.patch  chipstar_1_2.patch  (+2 more)
include/: CMakeLists.txt  CompilerWarnings.h  Makefile.am  Makefile.in  _builtin_renames.h  _clang_opencl.h  _enable_all_exts.h  _kernel.h  _kernel_c.h  _kernel_constants.h  _libclang_versions_checks.h  _pocl_opencl.h  bufalloc.h  locl.h  messages.h  opencl-c-base.h  opencl-c.h  pocl.h  pocl_cache.h  pocl_context.h  pocl_device.h  pocl_export.h  pocl_features.h  pocl_file_util.h  pocl_image_types.h  pocl_llvm_version.h  pocl_remote.h  pocl_spir.h  pocl_tests.h  pocl_types.h  poclu.h  rename_opencl.h  types.h  types.host.in  types.target.in  uthash.h  utlist.h  utlist_addon.h  vccompat.hpp
lib/: CMakeLists.txt  Makefile.am  Makefile.in
pocld/: CMakeLists.txt  avahi_advertise.c  avahi_advertise.cc  avahi_advertise.h  avahi_advertise.hh  cmd_queue.cc  cmd_queue.hh  cmdline.c  cmdline.h  cmdline.input  common.cc  common.hh  common_cl.hh  connection.cc  connection.hh  daemon.cc  daemon.hh  dht_advertise.cc  dht_advertise.hh  guarded_queue.hh  peer.cc  peer.hh  peer_handler.cc  peer_handler.hh  pocld.cc  pocld_config.h.in.cmake  pocld_lttng.c  pocld_lttng.h  rdma.cc  rdma.hh  rdma_reply_th.cc  rdma_reply_th.hh  rdma_request_th.cc  rdma_request_th.hh  reply_th.cc  reply_th.hh  request.cc  request.hh  request_th.cc  request_th.hh  (+9 more)
scripts/: CMakeLists.txt  Makefile.am  Makefile.in  locl-build.in  locl-kernel.in  locl-workgroup.in  pocl-build.in  pocl-kernel.in  pocl-standalone.in  pocl-standalone.in.cmake  pocl-workgroup.in
tests/: CMakeLists.txt  Makefile.am  amdsdk.at  atlocal.in  barrier1.dot  barrier1.ll  barrier1_barriers.dot  barrier1_barriers.ll  barrier1_barriers_workitem.dot  barrier1_barriers_workitem.ll  barriers1_golden.ll  barriers1_input.ll  barriers2_golden.ll  barriers2_input.ll  barriertails1_golden.ll  barriertails1_input.ll  barriertails2_golden.ll  barriertails2_input.ll  forbarrier1.dot  forbarrier1.ll  forbarrier1_barriers.dot  forbarrier1_barriers.ll  forbarrier1_barriers_btr.dot  forbarrier1_barriers_btr.ll  forbarrier1_barriers_btr_workitem.dot  forbarrier1_btr.dot  forbarrier1_btr.ll  forbarrier1_btr_barriers.dot  forbarrier1_btr_barriers.ll  forbarrier1_btr_barriers_workitem.dot  forbarrier1_loops.ll  forbarrier1_loops_btr.ll  forbarrier1_loops_btr_barriers.ll  forbarrier1_loops_btr_barriers_workitem.ll  forbarrier2.ll  forbarrier2_btr.ll  forbarrier2_btr_loops.ll  forbarrier2_loops.ll  forbarrier2_loops_btr.ll  forbarrier2_loops_btr_barriers.ll  (+90 more)
(+2984 files in other folders)
